--- a/elice0907/style2.css
+++ b/elice0907/style2.css
@@ -44,7 +44,8 @@ nav {
   background: #f4f4f4;
   padding: 20px;
   position: sticky;
-  /* top: 105px; */
+  top: 110px;
+  /* 메뉴가 스크롤을 내려도 따라내려옴 */
 }
 nav ul {
   white-space: nowrap;
@@ -63,4 +64,112 @@ nav li a {
 }
 nav li a:hover {
   text-decoration: underline;
+}
+main {
+  max-width: 100%;
+  width: 1200px;
+  margin: 80px auto;
+  padding: 0 40px;
+  box-sizing: border-box;
+}
+article h2 {
+  color: #f63232;
+  font-size: 38px;
+}
+article p {
+  line-height: 2em;
+}
+.images {
+  text-align: center;
+  margin: 80px 0;
+}
+.images li {
+  display: inline-block;
+  width: 30%;
+  margin: 10px 5%;
+}
+.images li img {
+  max-width: 100%;
+  /* 최하단에 위의 css코드를 넣으면 깔끔하게 정리됨 */
+}
+section.join {
+  background-color: #f4f4f4;
+  text-align: center;
+  padding: 60px 20px;
+  color: #4b4b4b;
+}
+/* 현재 같은 클래스가 위에 있어서, 동시에 적용되는 것을 볼 수 있음
+ 방법은 1) 위에 class="join"을 없애는 방법도 있지만
+      2) 태그 이름을 추가 해주면 태그 안의 join이 적용됨(단, 붙여써야함) */
+section.join h2 {
+  font-size: 30px;
+}
+form input {
+  margin: 20px 0;
+  padding: 10px 20px;
+  font-size: 24px;
+  border-radius: 28px;
+  border: 4px solid white;
+}
+footer {
+  background-color: #ef1919dc;
+  color: white;
+  padding: 10px;
+  text-align: center;
+}
+/*
+의사 클래스
+pseudo-classes 수도 클래스
+https: //www.w3schools.com/css/css_pseudo_classes.asp
+*/
+/* e-mail입력할 때 변화를 주는 효과 넣어보기 */
+form input:focus {
+  border: 4px dashed palevioletred;
+  outline: none;  
+}
+.images li:hover {
+  position: relative;
+  top: -14px;
+}
+nav li:first-child {
+  border: 3px solid red;
+}
+/* 같은 p태그 안에서도 첫번째 줄만 변경 */
+article p::first-line {
+  font-weight: bold;
+  font-size: 20px;
+}
+/* 반응형 화면 미디어 쿼리 */
+@media screen and (max-width: 930px) {
+  .banner .welcome {
+    font-size: 30px;
+  }
+}
+@media screen and (max-width: 800px) {
+  header h1 {
+    font-size: 20px;
+    border: solid white 5px;
+  }
+  .banner .welcome {
+    font-size: 15px;
+    position: relative;
+    left: 0;
+    top: 0;
+    text-align: center;
+    padding: 1px;
+  }
+  nav li {
+    width: 25%;
+    display: inline-block;
+    font-size: 15px;
+  }
+  .images li {
+    width: 100%;
+    margin: 80px 0;
+  }
+}
+/* 미디어 쿼리를 할 때, 순서도 영향을 줌  */
+
+@media only screen and (max-width: 600px) and (min-width: 400px) {
+  /* 뒤에가 후순위 */
 }
